# sep

./: .gitignore  .travis.yml  AUTHORS  AUTHORS.md  CHANGES.md  CMakeLists.txt  FindSEP.cmake  MANIFEST.in  Makefile  Makefile.am  README.md  TODO.md  appveyor.yml  bench.py  bootstrap.sh  codemeta.json  configure.ac  pyproject.toml  runtests  sconstruct  sep.pc.in  sep.pyx  sep_mw4.pyx  setup.py  test.py  tox.ini
.continuous-integration/appveyor/: install-miniconda.ps1
.github/workflows/: Build_Wheels_Upload_PyPI.yml  build-wheels-upload-pypi.yml  python-package-tox.yml
ctest/: compare.py  runtests  test_image.c
data/: README.md  back.fits  default.conv  default.param  default.sex  image.cat  image.fits  rms.fits
docs/: Makefile  apertures.rst  background.rst  conf.py  detection.rst  filter.rst  index.rst  matchedfilter.rst  reference.rst  rtd-pip-requirements  tutorial.ipynb
licenses/: MIT_LICENSE.md
paper/: paper.bib  paper.md
src/: Makefile  Makefile.am  analyse.c  analyse.h  aper.c  aperbody.c.inc  aperbody.h  aperture.c  aperture.i  back.c  background.c  circaper.c  clean.c  clean.h  convbody.h  convolve.c  deblend.c  defs.h  extract.c  extract.h  filter.c  lutz.c  lutz.h  maskshapes.c  matchedfilter.c  matchedfilterbody.c.inc  misc.c  objlist.c  overlap.h  plist.c  plist.h  refine.c  refine.h  scan.c  sconscript  sep.h  sepcore.h  util.c
test/: Makefile  Makefile.am  run-sextractor  runtest.c  runtests.c  sconscript  test_image.c  testfits.c
test/conf/: sextractor.param
test/sextractor/: run-sextractor  sextractor.conf  sextractor.param
